fix sidebar scrollbar

--- a/react/src/assets/styles/index.css
+++ b/react/src/assets/styles/index.css
@@ -81,15 +81,15 @@
 
     /* Customize scrollbar */
     ::-webkit-scrollbar{
-        @apply w-1
+        @apply w-2
     }
     ::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 5px #a5acb8;
+        box-shadow: none;
         border-radius: 10px;
         background:white;
     }
     ::-webkit-scrollbar-thumb {
-        @apply rounded-lg bg-gray-400
+        @apply rounded-lg bg-gray-300
     }
     ::-webkit-scrollbar-thumb:hover {
         @apply bg-gray-300
